# University-Assignments

./: .gitignore  CMakeLists.txt  HTML  hello.html  script.js  styles.css
Game OOP/Source/: Game.hpp  GhostManager.cpp  LevelManager.hpp
HTML/: ass1.php
HTML/Assignment 2 -  Gallery/: ass2.php
HTML/Assignment 3 - grid table & gallery/: ass3.php  styleass3.css
HTML/Assignment 4 - Form/: ass4.1.html  ass4.html  style4.css
HTML/Assignment 8 - Tik tak toe/: Index.html  script.js
HTML/Assignment 9 - Snake game/: script.js
HTML/TTT/: Index.html
HTML/wordpress/: wp-config.php
HW1/: Task2.cpp  Task7.cpp
Introduction to the specialty and programming languages./HW1/: Task1.cpp  Task3.cpp
Introduction to the specialty and programming languages./HW2/: Task1.cpp
Introduction-to-the-specialty-and-programming-languages./: Control  Control copy.cpp  Control.cpp  con  con.cpp
Introduction-to-the-specialty-and-programming-languages./HW1/: Task4.cpp  Task8.cpp
Introduction-to-the-specialty-and-programming-languages./HW3/: BMI  BMI.cpp  Calendar  Calendar.cpp
Introduction-to-the-specialty-and-programming-languages./HW4/: Task3a1.cpp  Task3a2.cpp  Task3b.cpp
Introduction-to-the-specialty-and-programming-languages./Task 9/: 9.1  9.1.cpp  9.2  9.2.cpp  output.txt
Introduction-to-the-specialty-and-programming-languages./Task_1/: Task6.cpp  Task9.cpp
Introduction-to-the-specialty-and-programming-languages./Task_2/: Task2.cpp  (+1 more)
Source/: Actor.hpp  DrawMap.cpp  DrawText.cpp  LevelManager.cpp  MapCollision.cpp  Pacman.cpp  Player.hpp  Trap.cpp  Utils.cpp  Utils.hpp
(+74 files in other folders)
